fix clipboard for execute and copypaste roles

--- a/src/css/code.css
+++ b/src/css/code.css
@@ -1,4 +1,6 @@
-.doc .console-input pre.highlight code {
+.doc .console-input pre.highlight code,
+.doc .execute pre.highlight code,
+.doc .copypaste pre.highlight code {
   background-color: antiquewhite;
   padding-right: 38px;
 }
