--- a/src/css/tabs.css
+++ b/src/css/tabs.css
@@ -31,13 +31,13 @@
 
 .tabset.is-loading .tabs li:not(:first-child),
 .tabset:not(.is-loading) .tabs li:not(.is-active) {
-  background-color: var(--color-brand-black);
-  color: var(--color-brand-white);
+  background-color: var(--color-black);
+  color: var(--color-white);
 }
 
 .tabset.is-loading .tabs li:first-child::after,
 .tabs li.is-active::after {
-  background-color: var(--color-brand-white);
+  background-color: var(--color-white);
   content: "";
   display: block;
   height: 3px; /* Chrome doesn't always paint the line accurately, so add a little extra */
@@ -48,7 +48,7 @@
 }
 
 .tabset > .content {
-  border: 1px solid var(--color-brand-gray);
+  border: 1px solid var(--color-gray-10);
   padding: 1.25rem;
 }
 
