--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -139,4 +139,6 @@
   --z-index-toolbar: 2;
   --z-index-page-version-menu: 3;
   --z-index-navbar: 4;
+  /* tabs */
+  --color-brand-black: #000000;
 }
