--- a/src/partials/pagination.hbs
+++ b/src/partials/pagination.hbs
@@ -2,10 +2,10 @@
 {{#if (or page.previous page.next)}}
 <nav class="pagination">
   {{#with page.previous}}
-  <span class="prev"><a href="{{{relativize ./url}}}">{{{./content}}}</a></span>
+  <span class="prev"><a href="{{{relativize ./url}}}" class="query-params-link">{{{./content}}}</a></span>
   {{/with}}
   {{#with page.next}}
-  <span class="next"><a href="{{{relativize ./url}}}">{{{./content}}}</a></span>
+  <span class="next"><a href="{{{relativize ./url}}}" class="query-params-link">{{{./content}}}</a></span>
   {{/with}}
 </nav>
 {{/if}}
